--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node main.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "GPLv3",
   "dependencies": {
     "fuse.js": "^6.6.2",
     "neat-csv": "^7.0.0",
